# druginsights

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  ui.py
data/: pdf2.py
drug_insights/: pyvenv.cfg
drug_insights/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
notebooks/: pinecone_integration_notes.ipynb
scripts/: ingest_config.json  ingest_data.py
src/agents/: executors.py  handlers.py  helpers.py  models.py  protocol.py
src/agents/prompts/: qa_prompts.py  readme.md
src/drug_insight/: example_feature.py  pdf_extractor.py  text_prettify.py
src/extractors/: parser.py  text_from_pdf.py
src/loaders/: text_loaders.py
src/vector_db/: pinecone.py  protocol.py
test/: test_example_feature.py
