[metadata]
name = DrugInsights
description = "RAG for Drug Interactions"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://axumai.org/
author = "Axum AI"
author_email = "contact@axumai.org"
version = 0.0.1

[options]
packages = find:
python_requires = >=3.9
install_requires =
    langchain == 0.2.3
    langchain-community == 0.2.4
    streamlit == 1.35.0
    langchain-openai == 0.1.8
    python-dotenv == 0.2.0
    pinecone-client 
    langchain-pinecone == 0.1.2

; [options.extras_require]

[options.packages.find]
where = src

; [options.entry_points]
; console_scripts =
;     synthformer = synthformer.main:run